# python-google-nest-sdm

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .python-version.rej  .ruff.toml  .yaml-lint.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  release.sh  renovate.json5  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: renovate.json5
.github/workflows/: cruft.yaml  lint.yaml  lint.yaml.rej  pages.yaml  publish.yaml  python-app-38.yml  python-package.yml  python-publish.yml  test.yaml  test.yaml.rej
google-nest-sdm/: auth.py
google_nest_sdm/: .camera_traits.py.swp  __init__.py  admin_client.py  auth.py  camera_traits.py  device.py  device_manager.py  device_traits.py  diagnostics.py  doorbell_traits.py  event.py  event_media.py  exceptions.py  google_nest.py  google_nest_api.py  google_nest_subscriber.py  model.py  registry.py  streaming_manager.py  structure.py  subscriber_client.py  thermostat_traits.py  traits.py  transcoder.py  typing.py  webrtc_util.py
script/: run-mypy.sh  run-mypy.sh.rej
tests/: auth_test.py  camera_traits_test.py  conftest.py  context.py  device_manager_test.py  device_test.py  device_traits_test.py  doorbell_traits_test.py  event_media_test.py  event_test.py  google_nest_api_test.py  google_nest_subscriber_test.py  structure_test.py  test_admin_client.py  test_auth.py  test_camera_traits.py  test_device.py  test_device_manager.py  test_device_traits.py  test_doorbell_traits.py  test_event.py  test_event_media.py  test_google_nest_api.py  test_google_nest_subscriber.py  test_streaming_manager.py  test_structure.py  test_subscriber_client.py  test_thermostat_traits.py  test_transcoder.py  test_webrtc_util.py  thermostat_traits_test.py
