[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "google_nest_sdm"
version = "9.0.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Library for the Google Nest SDM API"
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.13"
classifiers = []
dependencies = [
  "aiohttp>=3.7.3",
  "google-auth>=1.22.0",
  "google-auth-oauthlib>=0.4.1",
  "google-cloud-pubsub>=2.1.0",
  "requests-oauthlib>=1.3.0",
  "PyYAML>=6.0",
  "mashumaro>=3.12",
]

[project.urls]
Source = "https://github.com/allenporter/google_nest_sdm"

[tool.setuptools.packages.find]
include = ["google_nest_sdm*"]

[tool.mypy]
exclude = [
  "venv/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = [
    "import-untyped",
]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

ignore_missing_imports = true
warn_no_return = true
