[metadata]
name = google_nest_sdm
version = 5.0.1
description = Library for the Google Nest SDM API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/python-google-nest-sdm
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.11
install_requires =
    aiohttp>=3.7.3
    google-auth>=1.22.0
    google-auth-oauthlib>=0.4.1
    google-cloud-pubsub>=2.1.0
    requests-oauthlib>=1.3.0
    PyYAML>=6.0
    mashumaro>=3.12
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
google_nest_sdm = py.typed

[options.entry_points]
console_scripts =
    google_nest=google_nest_sdm.google_nest:main
