[metadata]
name = google_nest_sdm
version = 6.1.4
description = Library for the Google Nest SDM API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/python-google-nest-sdm
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyYAML>=6.0
    aiohttp>=3.7.3
    google-auth>=1.22.0
    google-auth-oauthlib>=0.4.1
    google-cloud-pubsub>=2.1.0
    mashumaro>=3.12
    requests-oauthlib>=1.3.0
python_requires = >=3.11
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    google_nest=google_nest_sdm.google_nest:main

[options.package_data]
google_nest_sdm = py.typed
